# auran.llc

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  codex-review.yml  deploy.yml  envoy-instructions.md  envoy-review.yml
chat/: .dockerignore  .env.example  Dockerfile  PERSISTENCE_INTEGRATION.md  alembic.ini  commons.py  conftest.py  fix_env.py  govee.py  graph_recall.py  homepage.html  index.html  memory.py  moltbook.py  outpost.py  persistence.py  pyproject.toml  ruff.toml  server.py  system_prompt.txt  terms.html  test_commons.py  test_format_time.mjs  test_key.py  test_migration.py  test_moltbook.py  test_orient_repair.py  test_outpost.py  test_recall.py  test_scene_memory.py  test_security.py
chat/alembic/: env.py
chat/alembic/versions/: 3e08a1403d9f_memory_schema_v1.py  a7c3e2f19b01_add_channel_domain.py  b4f2d8e71c03_add_distillation_schema.py
chat/docs/: PR24-test-plan.md
chat/migrations/: 003_add_hooks_to_moments.sql  004_add_transcript_columns.sql  005_add_occurred_at_to_moments.sql  006_add_superseded_to_moments.sql  007_create_conversations_table.sql
chat/schema/: __init__.py  models.py
distillation/: .env.example  backfill.py  clean_pass.py  cli.py  config.py  coverage.py  dedup.py  distiller.py  migrate.py  pyproject.toml  references.py  resilience.py  review_ui.py  reviewer.py  security.py  service.py  verify.py
distillation/tests/: test_backfill.py  test_circuit_breaker.py  test_clean_pass.py  test_coverage.py  test_dedup.py  test_distiller.py  test_references.py  test_reviewer.py  test_security.py  test_verify.py
qa/: 20260525-conversation-persistence-test-expectations.md  20260607-memory-schema-v1.md  20260608-system-prompt-independent-state.md  20260612-pr51-followup.md  README.md
senses/: RETRO_NOTES.md  SOUND_LAYER_NOTES.md  index.html  night1-viz.html  sensory-log-2026-05-24.json
