[project]
name = "auran-chat"
version = "0.1.0"
description = "Auran Chat Server — chat.auran.llc"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.0",
    "voyageai>=0.3.0",
    "neo4j>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
auran-chat = "server:main"
