[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["distillation"]

[tool.setuptools.package-dir]
distillation = "."

[project]
name = "auran-distillation"
version = "0.1.0"
description = "Episode distillation pipeline — batch processing transcripts into verified episodes"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "psycopg2-binary>=2.9.9",
    "voyageai>=0.3.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
distill = "distillation.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"review_ui.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
